[gd_scene load_steps=10 format=3 uid="uid://bu33umkrtsw81"]

[ext_resource type="Script" path="res://scripts/PauseScreen.gd" id="1_5kvwo"]
[ext_resource type="PackedScene" uid="uid://cffa7qodu0m4t" path="res://scenes/MenuScreen.tscn" id="2_yhxah"]
[ext_resource type="Texture2D" uid="uid://fnmyem3pxee6" path="res://textures/HUD/Buttons/Square/Repeat/Default@2x-1.png" id="3_p7h4b"]
[ext_resource type="Texture2D" uid="uid://bs716e1yg6pvy" path="res://textures/HUD/Buttons/Square/Repeat/Hover@2x-1.png" id="4_52ctv"]
[ext_resource type="Texture2D" uid="uid://vcn1nftb17f8" path="res://textures/HUD/Button/Rect/Fill/Default@2x-1.png" id="5_gc42o"]
[ext_resource type="Texture2D" uid="uid://bwwertc1r3057" path="res://textures/HUD/Button/Rect/Fill/Hover@2x-1.png" id="6_7jm2i"]
[ext_resource type="FontFile" uid="uid://cnuhbnlmaseqv" path="res://fonts/Bungee-Regular.otf" id="7_tocqg"]

[sub_resource type="LabelSettings" id="LabelSettings_qrm40"]
font = ExtResource("7_tocqg")
font_size = 72
font_color = Color(0.643137, 0.572549, 0.372549, 1)
shadow_color = Color(0.443137, 0.407843, 0.305882, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bsiyj"]
font = ExtResource("7_tocqg")
font_size = 28
font_color = Color(0.643137, 0.572549, 0.372549, 1)
shadow_size = 2
shadow_color = Color(0.427451, 0.392157, 0.298039, 1)
shadow_offset = Vector2(-1, -1.5)

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5kvwo")

[node name="MenuScreen" parent="." instance=ExtResource("2_yhxah")]
layout_mode = 1

[node name="ResumeGameButton" type="TextureButton" parent="MenuScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.922
anchor_right = 0.5
anchor_bottom = 0.922
offset_left = -224.0
offset_top = -355.76
offset_right = 224.0
offset_bottom = -155.76
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("5_gc42o")
texture_hover = ExtResource("6_7jm2i")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="MenuScreen/ResumeGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -36.0
offset_right = 102.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "RESUME"
label_settings = SubResource("LabelSettings_qrm40")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="RestartLevelButton" type="TextureButton" parent="MenuScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.722
anchor_right = 0.5
anchor_bottom = 0.722
offset_left = -224.0
offset_top = 76.24
offset_right = -96.0
offset_bottom = 204.24
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_p7h4b")
texture_hover = ExtResource("4_52ctv")
ignore_texture_size = true
stretch_mode = 5

[node name="RestartGameButton" type="TextureButton" parent="MenuScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.922
anchor_right = 0.5
anchor_bottom = 0.922
offset_left = -72.0
offset_top = -139.76
offset_right = 224.0
offset_bottom = -11.76
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("5_gc42o")
texture_hover = ExtResource("6_7jm2i")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="MenuScreen/RestartGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -24.0
offset_right = 102.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART
GAME"
label_settings = SubResource("LabelSettings_bsiyj")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="MenuScreen/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="MenuScreen/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="MenuScreen/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
